2025-01-22  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-mode.el (howm-list-all, howm-list-recent):
	add message for empty list to help beginners
	thx > @rhstanton san
	https://github.com/kaorahi/howm/issues/28

	* howm-menu.el (howm-find-yesterday):
	Fix howm-find-yesterday prefix arg handling
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/32

	* howm-vars.el (howm-menu-footer):
	Fix howm-menu-footer documentation
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/32

	* howm-mode.el (howm-keyword-add-current-buffer):
	Don't message twice when saving buffer
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/32

	* howm-view.el (howm-view-summary):
	Include search term when showing "No match"
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/32

2025-01-06  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-date.el (howm-action-lock-date-search):
	fix "search for next/previous date" correctly (ref. afb4135)
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	for pointing out the issue
	https://github.com/kaorahi/howm/pull/31

	* howm-mode.el (howm-search): ditto.

2025-01-05  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-view.el (howm-view-summary-mode-body):
	delete howm-view-font-lock-first-time to fix #27
	I can't remember why this variable was needed. Only for efficiency?
	thx > @rhstanton san
	https://github.com/kaorahi/howm/issues/27

2025-01-03  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-mode.el (howm-insert-template-string):
	fix double calls to howm-template-string
	thx > Nicolai Singh san (nicolaisingh at pm.me)
	https://github.com/kaorahi/howm/pull/26

2024-12-31  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.2

2024-12-22  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el (riffle-pop-to-buffer):